src/objects/Questions__c.object
<CustomObject>
    <description>QuestionsObject</description>
    <fields>
        <fullName>Answer_Type__c</fullName>
        <label>Answer Type</label>
        <picklist>
            <picklistValues>
                <fullName>radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>checkbox</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CT_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>CT Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Eval_ID__c</fullName>
        <description>External ID from the impact db.</description>
        <externalId>true</externalId>
        <label>Eval ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Surveyed_Post__c</fullName>
        <description>Number of people asked question post-campaign.</description>
        <label>N Surveyed (Post)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Surveyed_Pre__c</fullName>
        <description>Number of people asked the question pre-campaign.</description>
        <label>N Surveyed (Pre)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Number__c</fullName>
        <description>Survey question number</description>
        <label>Question Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <label>Question Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMART_Objective__c</fullName>
        <description>Objective the KAP survey question is addressing.</description>
        <label>SMART Objective</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Pride Scorecard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>KAP Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scorecard Tracker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <description>Hoped for result.</description>
        <label>Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ToC_Category__c</fullName>
        <description>ToC category the question addresses</description>
        <label>ToC Category</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Capacity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constituency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conservation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Questions</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Question_Text__c</columns>
        <columns>Type__c</columns>
        <columns>CT_Id__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>New_Scorecard_Updates</fullName>
        <columns>NAME</columns>
        <columns>Question_Text__c</columns>
        <columns>Answer_Type__c</columns>
        <columns>Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Question_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>Scorecard Tracker</value>
        </filters>
        <label>New Scorecard Updates</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Qs ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <recordTypes>
        <fullName>KAP</fullName>
        <active>true</active>
        <description>KAP survey questions</description>
        <label>KAP</label>
    </recordTypes>
    <recordTypes>
        <fullName>PSC</fullName>
        <active>true</active>
        <description>Pride Scorecord record type</description>
        <label>PSC</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>